# gitops-deployment-platform

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml  requirements.txt  ty.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  pull_request_template.md
.github/instructions/: commitMessageGeneration.instructions.md  pullRequestDescriptionGeneration.instructions.md
docs/: index.md
docs/dev/: authoring-documentation.md  developer-setup.md  environment-variables.md  resources.md
docs/dev/mise/: best-practices.md  configuration.md  index.md  troubleshooting.md  usage.md
docs/dev/pre-commit-hooks/: commit-messages.md  index.md  python-hooks.md  standard-checks.md  terraform-hooks.md  usage.md
docs/platform/: architecture.md  local-kubernetes.md
docs/platform/terraform/backend-bootstrap/: applying.md  destroying.md  index.md  state-management.md  usage.md
docs/services/: api.md  web.md
docs/thinking/: branch-protection.md  constraints.md  core-objectives.md  devcontainer.md  documentation-principles.md  safe-to-fail-narrative.md
infra/bootstrap/: backend.tf  main.tf  output.tf  variable.tf
scripts/: bootstrap-terraform-backend.sh  create-kind-cluster.sh  delete-kind-cluster.sh  setup.sh
services/api/: README.md  pyproject.toml
services/api/src/api/: app.py  config.py  error.py  main.py  routes.py
services/api/tests/: test_api.py
services/web/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
services/web/src/layouts/: Layout.astro
(+5 files in other folders)
