[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rajesh Das", email = "rajesh@hyperoot.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.5",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
